@@ -11,20 +11,5 @@ test {
         excludeTags 'nested-integration-test'
         includeEngines 'randomizedtesting-jupiter'
     }
-
-    def argProvider = objects.newInstance(UnsafeMemoryAccessArgProvider)
-    argProvider.launcher.set(javaLauncher)
-    jvmArgumentProviders.add(argProvider)
-}
-
-abstract class UnsafeMemoryAccessArgProvider implements CommandLineArgumentProvider {
-    @Nested
-    abstract Property<JavaLauncher> getLauncher()
-
-    @Override
-    Iterable<String> asArguments() {
-        launcher.get().metadata.languageVersion.asInt() >= 25
-                ? ["--sun-misc-unsafe-memory-access=deny"]
-                : []
-    }
+    jvmArgs("-Dnet.bytebuddy.safe=true")
 }
